# EchoPulse

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-mcp.txt  requirements-streamlit.txt
docker/: mcp.Dockerfile  streamlit.Dockerfile
docker/postgres/: 02-echopulse-schema.sql
mcp/: mcp_server.py  mcp_tools.py
n8n/: agent_workflow.json  ingest_workflow.json
streamlit/: app.py
streamlit/pages/: analyst.py  feedback.py
