[project]
name = "echopulse"
version = "0.1.0"
description = "Customer feedback platform with Streamlit, n8n, MCP, and PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.0.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
